--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Print hello message
         run: echo "🎉 Hello from GitHub Actions!"
       
-      - name: Print current time
+      - name: Print current time  //prints the current time
         run: date
       
       - name: Print runner information
