Add secret access step in GitHub Actions workflow
Added step to access and print the length of a secret.

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - name: Print hello message
         run: echo "🎉 Hello from GitHub Actions!"
+
+      - name: Access secret
+        run: |
+          echo "Secret length: ${#{{ secrets.TEST_SECRET }}}"
       
       - name: Print current time  //prints the current time
         run: date
