Create and upload build artifact in workflow
Added steps to create and upload build artifact.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -42,6 +42,15 @@ jobs:
       - name: Build application
         working-directory: ./sample-app
         run: npm run build
+
+      - name: Create artifact
+        run: echo "Build output" > output.txt
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-output
+          path: output.txt
       
       - name: Run tests
         working-directory: ./sample-app
@@ -63,7 +72,6 @@ jobs:
             echo "✅ Coverage report generated"
           else
             echo "⚠️ No coverage report found"
-          fi
 
   lint-check:
     name: Lint Check
@@ -78,7 +86,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'sample-app/package-lock.json'
       
-      - working-directory: ./sample-app
+      - name: Install dependencies
+        working-directory: ./sample-app
         run: npm ci
       
       - name: Run ESLint
@@ -98,3 +107,18 @@ jobs:
           echo "🎯 Test Run Summary"
           echo "==================="
           echo "✅ All tests completed"
+
+  use-artifact:
+    name: Use Artifact
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-output
+          path: ./artifact
+
+      - name: Show artifact content
+        run: cat ./artifact/output.txt
